--- a/app/assets/stylesheets/comments.css
+++ b/app/assets/stylesheets/comments.css
@@ -7,10 +7,11 @@
   font-size: 1.5em;
   font-weight: bold;
   margin-bottom: 0.5em;
+  color: rgb(8, 127, 143);
 }
 
 .submit {
-  background-color: #ccc;
+  background-color: rgb(8, 127, 143);
   border: none;
   color: white;
   padding: 15px 32px;
@@ -31,4 +32,9 @@
   -webkit-transition: 0.5s;
   transition: 0.5s;
   outline: none;
+}
+
+.field {
+  margin-bottom: 20px;
+  width: 30%;
 }
