--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -27,6 +27,7 @@
 <%= form_with model: @like, url: user_post_likes_path(post_id: @post.id) do |form| %>
 <%= form.submit "Like"%>
 <% end %>
+<%= link_to 'Delete Post', user_post_path, data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'} %>
 </div> 
 
 </section>
