--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,7 +16,8 @@
     <% else %>
       <% @post.comments.includes(:user).each do |comment| %>
         <li>
-          <%= comment.user.name %>: <%= comment.text %>
+          <%= comment.user.name %>: <%= comment.text %> :
+          <%= link_to 'delete', user_post_comment_path(@post.user_id, @post.id, comment.id), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %>
         </li>
       <% end %>
     <% end %>
