--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -66,3 +66,20 @@
   padding: 10px;
   border: none;
 }
+
+.like_submit > * {
+  text-decoration: none;
+  text-align: center;
+  font-weight: bold;
+  border: none;
+  width: 130px;
+  background-color: rgb(8, 127, 143);
+  color: white;
+  padding: 5px;
+}
+
+.like_submit > *:hover {
+  text-decoration: underline;
+  color: white;
+  font-style: italic;
+}
