--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,7 +26,9 @@
   <div class='comment_box'>
 <%= link_to "Add comment", new_user_post_comment_path(user_id: @post.user_id, post_id: @post.id ), class: "" %>
 <%= form_with model: @like, url: user_post_likes_path(post_id: @post.id) do |form| %>
+<div class='like_submit'>
 <%= form.submit "Like"%>
+</div>
 <% end %>
 <%= link_to 'Delete Post', user_post_path, data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'} %>
 </div> 
