--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <section>
-  <img src="<%= @current_user&.photo || '' %>" alt="current user">
+  <img src = "<%= @current_user&.photo || 'photo.png' %>" alt="current user">
   <ul class='list_users'>
     <% @users.each do |user| %>
       <li class='one_user'>
